fix: overflow

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
     position: relative;
 }
 
+.wrap {
+    overflow: hidden;
+}
+
 .wrapper .top {
     width: 100%;
     min-height: 350px;
@@ -26,7 +30,6 @@ body {
     background-color: #848484;
     background-size: cover;
     background-position: center;
-    overflow: hidden;
     z-index: 1;
     padding: 1rem;
     transition: 0.6s ease-in-out;
@@ -36,14 +39,19 @@ body {
 }
 
 .wrapper .top .cal {
-    padding: 3px;
-    border: 2px solid white;
+    padding: 5px;
+    border: 3px solid white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
+    transition: 1s ease-in-out;
     display: none;
+}
+
+.cal span {
+    font-size: 1.3rem;
 }
 
 .active {
@@ -61,7 +69,7 @@ body {
     box-sizing: border-box;
     background-color: white;
     position: absolute;
-    top: 60%;
+    top: 57%;
     min-height: 250px;
     z-index: 2;
     margin: 0 .5rem;
@@ -75,6 +83,7 @@ body {
     display: flex;
     align-items: center;
     font-size: .8rem;
+    padding: 0 1rem;
 }
 
 .com-sec span {
